--- a/wp-content/themes/miro/assets/styles/components/_wp-classes.scss
+++ b/wp-content/themes/miro/assets/styles/components/_wp-classes.scss
@@ -2,7 +2,7 @@
 // http://codex.wordpress.org/CSS#WordPress_Generated_Classes
 
 // Media alignment
-.alignnone {
+/*.alignnone {
   margin-left: 0;
   margin-right: 0;
   max-width: 100%;
@@ -49,4 +49,4 @@
 .screen-reader-text {
   @extend .sr-only;
   @extend .sr-only-focusable;
-}
+}*/
