--- a/wp-content/themes/miro/assets/styles/components/_grid.scss
+++ b/wp-content/themes/miro/assets/styles/components/_grid.scss
@@ -1,5 +1,5 @@
 // Grid system
-.main {
+/*.main {
   @include make-col-ready();
   @include media-breakpoint-up(sm) {
     @include make-col($main-sm-columns);
@@ -13,4 +13,4 @@
   @include media-breakpoint-up(sm) {
     @include make-col($sidebar-sm-columns);
   }
-}
+}*/
