--- a/wp-content/themes/miro/assets/styles/components/_buttons.scss
+++ b/wp-content/themes/miro/assets/styles/components/_buttons.scss
@@ -87,3 +87,59 @@
 .btn-outline-light:hover {
 	background-color:rgba($white,.25);
 }
+
+.btn-circle {
+	display: inline-block;
+	border-radius:50%;
+	text-align:center;
+	position:relative;
+	transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+	box-shadow:0 5px 15px rgba($black, .3);
+	i {
+		font-weight: $font-bold;
+	}
+	a {
+		position:absolute;
+		top:0;
+		left:0;
+		width:100%;
+		height:100%;
+	}
+}
+
+@include media-breakpoint-up(xs) {
+	.btn-circle {
+		height:37px;
+		width:37px;
+		i {
+			font-size:16px
+		}
+	}
+}
+@include media-breakpoint-up(sm) {
+	.btn-circle {
+		height:50px;
+		width:50px;
+		i {
+			font-size:18px
+		}
+	}
+}
+@include media-breakpoint-up(lg) {
+	.btn-circle {
+		height:60px;
+		width:60px;
+		i {
+			font-size:20px
+		}
+	}
+}
+@include media-breakpoint-up(xl) {
+	.btn-circle {
+		height:70px;
+		width:70px;
+		i {
+			font-size:24px
+		}
+	}
+}
