--- a/wp-content/themes/miro/assets/styles/common/_global.scss
+++ b/wp-content/themes/miro/assets/styles/common/_global.scss
@@ -78,6 +78,15 @@ h1, h2 {
 .text-bold {
 	font-weight: $font-bold;
 }
+.row.no-gutters {
+	margin-right: 0;
+	margin-left: 0;
+	& > [class^="col-"],
+	& > [class*=" col-"] {
+		padding-right: 0;
+		padding-left: 0;
+	}
+}
 
 
 @include media-breakpoint-up(xs) {
