--- a/wp-content/themes/miro/assets/styles/components/_buttons.scss
+++ b/wp-content/themes/miro/assets/styles/components/_buttons.scss
@@ -70,10 +70,11 @@
 	border-color:$btn-dark-dark;
 }
 .btn-link {
-	color:$mdc-blue-500 !important;
+	color:$mdc-light-blue-400 !important;
 }
 .btn-link:hover {
-	color:$mdc-blue-600 !important;
+	color:$mdc-light-blue-600 !important;
+	text-decoration:none;
 }
 .btn-primary, .btn-warning, .btn-secondary, .btn-success, .btn-danger, .btn-dark, .button-info {
 	color:$white !important;
@@ -87,59 +88,28 @@
 .btn-outline-light:hover {
 	background-color:rgba($white,.25);
 }
-
 .btn-circle {
-	display: inline-block;
+	padding:0.5rem;
 	border-radius:50%;
-	text-align:center;
-	position:relative;
+	border-width:3px;
+	border-style:solid;
+	display:inline-block;
+	font-size:1.3rem;
 	transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+.btn-shadow {
 	box-shadow:0 5px 15px rgba($black, .3);
-	i {
-		font-weight: $font-bold;
-	}
-	a {
-		position:absolute;
-		top:0;
-		left:0;
-		width:100%;
-		height:100%;
-	}
 }
 
 @include media-breakpoint-up(xs) {
-	.btn-circle {
-		height:37px;
-		width:37px;
-		i {
-			font-size:16px
-		}
-	}
+
 }
 @include media-breakpoint-up(sm) {
-	.btn-circle {
-		height:50px;
-		width:50px;
-		i {
-			font-size:18px
-		}
-	}
+
 }
 @include media-breakpoint-up(lg) {
-	.btn-circle {
-		height:60px;
-		width:60px;
-		i {
-			font-size:20px
-		}
-	}
+
 }
 @include media-breakpoint-up(xl) {
-	.btn-circle {
-		height:70px;
-		width:70px;
-		i {
-			font-size:24px
-		}
-	}
+
 }
