--- a/wp-content/themes/miro/assets/styles/components/_forms.scss
+++ b/wp-content/themes/miro/assets/styles/components/_forms.scss
@@ -13,3 +13,19 @@
   @extend .btn;
   @extend .btn-secondary;
 }*/
+
+.search-form {
+	position:relative;
+	input {
+		border:none;
+		padding:10px;
+		width:100%;
+		outline:none;
+	}
+	button {
+		/*position:absolute;
+		top:5px;
+		right:15px;*/
+		font-size:1.5rem;
+	}
+}
