--- a/wp-content/themes/miro/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/miro/assets/styles/layouts/_header.scss
@@ -25,41 +25,66 @@
 			left:0;
 			width: 100%;
 			height:100vh;
-			padding:30px;
+			padding:100px 0;
 			overflow:auto;
-		}
-	}
-	header {
-		.icon-menu {
-			padding:10px;
-			background-color:$white;
-			border-radius:2rem;
-			border:solid 2px $primary;
-			color:$primary;
-			font-size: 13px;
-			font-weight: $font-bold;
-			line-height:1.5;
-			transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-		}
-		.icon-menu:focus {
-			box-shadow: rgba(41, 182, 246, 0.5) 0px 0px 0px 0.2rem;
 		}
 	}
 	.overlay-close {
 		position:absolute;
 	}
-	.overlay-open {
+	.overlay-menu {
 		position:fixed;
 	}
-	.overlay-open, .overlay-close {
+	.overlay-close, .overlay-menu {
 		top:25px;
 		right:30px;
 		z-index:1;
+		padding:0.5rem;
 	}
+	header {
+		.dropdown-menu {
+			border:$mdc-light-blue-400 solid 3px;
+			box-sizing:border-box;
+			margin-top:15px;
+			position:relative
+			.dropdown-item {
+				padding: .3rem 1.5rem;
+			}
+			.dropdown-item:hover {
+				background-color:$mdc-light-blue-100;
+			}
+			.arrow {
+				border-style: solid;
+				position: absolute;
+				border-color: transparent transparent $mdc-light-blue-400 transparent;
+				border-width: 10px;
+				top: -20px;
+				right: 1.2rem;
+			}
+			.arrow:after {
+
+    border-style: solid;
+    position: absolute;
+    border-color: transparent transparent $white transparent;
+    border-width: 8px;
+    top: -4px;
+    right:-8px;
+    content: "";
+
+			}
+		}
+	}
+
+
+
+
+
+
+
 }
 
 @include media-breakpoint-up(sm) {
-	.overlay-open, .overlay-close {
+	.overlay-close, .overlay-menu {
 		top:30px;
 		right:30px;
 	}
@@ -70,10 +95,8 @@
 		height:42px;
 		width:200px;
 	}
-	header {
-		.icon-menu {
-			font-size:18px;
-		}
+	.overlay-close, .overlay-menu {
+		padding:1rem;
 	}
 }
 
@@ -85,10 +108,5 @@
 	.header-logo {
 		height:50px;
 		width:240px;
-	}
-	header {
-		.icon-menu {
-			font-size: 23px;
-		}
 	}
 }
