--- a/wp-content/themes/miro/assets/styles/components/_grid.scss
+++ b/wp-content/themes/miro/assets/styles/components/_grid.scss
@@ -16,4 +16,12 @@
 }*/
 .card {
 	border-radius:0;
+	-o-transition:.25s;
+	-ms-transition:.25s;
+	-moz-transition:.25s;
+	-webkit-transition:.25s;
+	transition:.25s;
+}
+.card:hover {
+	box-shadow: 0 5px 15px $mdc-grey-300;
 }
