--- a/wp-content/themes/miro/assets/styles/common/_global.scss
+++ b/wp-content/themes/miro/assets/styles/common/_global.scss
@@ -87,6 +87,12 @@ h1, h2 {
 		padding-left: 0;
 	}
 }
+.sixteen-nine {
+  @include aspect-ratio(16, 9);
+}
+.four-three {
+  @include aspect-ratio(4, 3);
+}
 
 
 @include media-breakpoint-up(xs) {
