--- a/wp-content/themes/miro/assets/styles/components/_buttons.scss
+++ b/wp-content/themes/miro/assets/styles/components/_buttons.scss
@@ -96,6 +96,7 @@
 	display:inline-block;
 	font-size:1.3rem;
 	transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+	line-height:normal;
 }
 .btn-shadow {
 	box-shadow:0 5px 15px rgba($black, .3);
