--- a/wp-content/themes/miro/assets/styles/components/_grid.scss
+++ b/wp-content/themes/miro/assets/styles/components/_grid.scss
@@ -21,7 +21,15 @@
 	-moz-transition:.25s;
 	-webkit-transition:.25s;
 	transition:.25s;
+	.card-img {
+		border:none;
+		border-radius:0;
+	}
+	.card-footer {
+		border:none;
+		border-radius:0;
+	}
 }
 .card:hover {
-	box-shadow: 0 5px 15px $mdc-grey-300;
+	box-shadow: 0 5px 15px $mdc-grey-400;
 }
