--- a/wp-content/themes/miro/assets/styles/layouts/_posts.scss
+++ b/wp-content/themes/miro/assets/styles/layouts/_posts.scss
@@ -34,3 +34,43 @@
 		max-width:100% !important;
 	}
 }
+
+//* Homepage Slider
+.home-slider {
+	width:100%;
+	height:100vh;
+	background-color:$mdc-grey-100;
+	.slider .slide {
+		width:100%;
+		height:100vh;
+		outline:none;
+    position:relative;
+    .image-overlay {
+    	position:absolute;
+    	top:0;
+    	left:0;
+    	width:100%;
+    	height:100%;
+    	z-index:1;
+    	opacity:.75;
+    }
+    .background-image {
+    	position:absolute;
+    	top:0;
+    	left:0;
+    	width:100%;
+    	height:100%;
+			background-attachment:fixed;
+			background-position:center;
+			background-repeat:no-repeat;
+			background-size:cover;
+			-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+	    filter: grayscale(100%);
+    }
+	}
+
+
+
+
+}
+
