--- a/wp-content/themes/miro/assets/styles/main.scss
+++ b/wp-content/themes/miro/assets/styles/main.scss
@@ -14,6 +14,7 @@
 @import "components/comments";
 @import "components/forms";
 @import "components/grid";
+@import "components/slick";
 @import "components/wp-classes";
 @import "layouts/header";
 @import "layouts/sidebar";
