--- a/wp-content/themes/miro/assets/styles/layouts/_posts.scss
+++ b/wp-content/themes/miro/assets/styles/layouts/_posts.scss
@@ -45,6 +45,14 @@
 		height:100vh;
 		outline:none;
     position:relative;
+    .slide-content {
+    	position:absolute;
+    	top:0;
+    	left:0;
+    	width:100%;
+    	height:100%;
+    	z-index:2;
+    }
     .image-overlay {
     	position:absolute;
     	top:0;
