--- a/wp-content/themes/miro/assets/styles/layouts/_posts.scss
+++ b/wp-content/themes/miro/assets/styles/layouts/_posts.scss
@@ -40,6 +40,7 @@
 	width:100%;
 	height:100vh;
 	background-color:$mdc-grey-100;
+	position:relative;
 	.slider .slide {
 		width:100%;
 		height:100vh;
@@ -76,9 +77,19 @@
 	    filter: grayscale(100%);
     }
 	}
-
-
-
-
+	.toggle-left, .toggle-right {
+		position: absolute;
+		top:50%;
+		transform:translate(0%, -50%);
+		-webkit-transform:translate(0%, -50%);
+		z-index: 10;
+		cursor:pointer;
+	}
+	.toggle-left {
+		left:30px;
+	}
+	.toggle-right {
+		right:30px;
+	}
 }
 
