--- a/wp-content/themes/miro/assets/styles/components/_slick.scss
+++ b/wp-content/themes/miro/assets/styles/components/_slick.scss
@@ -98,3 +98,139 @@
 .slick-arrow.slick-hidden {
     display: none;
 }
+.slick-dots {
+	position: absolute;
+	bottom: 30px;
+	list-style: none;
+	display: block;
+	text-align: center;
+	padding: 0;
+	width: 100%;
+	z-index: 100;
+	margin:0;
+	li {
+		position: relative;
+		display: inline-block;
+		height: 20px;
+		width: 20px;
+		margin: 0 5px;
+		padding: 0;
+		cursor: pointer;
+		button {
+			border: 0;
+			background: transparent;
+			display: block;
+			height: 20px;
+			width: 20px;
+			outline: none;
+			line-height: 0px;
+			font-size: 0px;
+			color: transparent;
+			padding: 5px;
+			cursor: pointer;
+			&:hover, &:focus {
+				outline: none;
+				&:before {
+					opacity: $slick-opacity-on-hover;
+				}
+			}
+			&:before {
+				position: absolute;
+				top: 0;
+				left: 0;
+				content: $slick-dot-character;
+				width: 20px;
+				height: 20px;
+				font-family: 'icomoon';
+				font-size: $slick-dot-size;
+				line-height: 20px;
+				text-align: center;
+				color: $slick-dot-color;
+				opacity: $slick-opacity-not-active;
+				-webkit-font-smoothing: antialiased;
+				-moz-osx-font-smoothing: grayscale;
+			}
+		}
+		&.slick-active button:before {
+			color: $slick-dot-color-active;
+			opacity: $slick-opacity-default;
+		}
+	}
+}
+
+//* Homepage Slider
+.home-slider {
+	width:100%;
+	height:100vh;
+	background-color:$mdc-grey-100;
+	position:relative;
+	.slider .slide {
+		width:100%;
+		height:100vh;
+		outline:none;
+    position:relative;
+    .slide-content {
+    	position:absolute;
+    	top:0;
+    	left:0;
+    	width:100%;
+    	height:100%;
+    	z-index:2;
+    }
+    .image-overlay {
+    	position:absolute;
+    	top:0;
+    	left:0;
+    	width:100%;
+    	height:100%;
+    	z-index:1;
+    	opacity:.75;
+    }
+    .background-image {
+    	position:absolute;
+    	top:0;
+    	left:0;
+    	width:100%;
+    	height:100%;
+			background-position:center;
+			background-repeat:no-repeat;
+			background-size:cover;
+			-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+	    filter: grayscale(100%);
+    }
+	}
+	.toggle-left, .toggle-right {
+		position: absolute;
+		top:50%;
+		transform:translate(0%, -50%);
+		-webkit-transform:translate(0%, -50%);
+		z-index: 10;
+		cursor:pointer;
+	}
+	.toggle-left {
+		left:30px;
+	}
+	.toggle-right {
+		right:30px;
+	}
+}
+
+@include media-breakpoint-up(xs) {
+	.home-slider .slider .slide .background-image {
+		background-attachment:scroll;
+	}
+	.slick-arrow {
+		display:none !important;
+	}
+}
+@include media-breakpoint-up(lg) {
+	.home-slider .slider .slide .background-image {
+		background-attachment:fixed;
+	}
+	.slick-dots {
+		display:none !important;
+	}
+	.slick-arrow {
+		display:inline-block !important;
+	}
+}
