--- a/wp-content/themes/miro/assets/styles/common/_global.scss
+++ b/wp-content/themes/miro/assets/styles/common/_global.scss
@@ -90,11 +90,11 @@ a:hover {
 .sixteen-nine {
   @include aspect-ratio(16, 9);
 }
+.twenty-one-nine {
+  @include aspect-ratio(21, 9);
+}
 .four-three {
   @include aspect-ratio(4, 3);
-}
-.one-one  {
-  @include aspect-ratio(1, 1);
 }
 
 
