--- a/wp-content/themes/miro/assets/styles/layouts/_posts.scss
+++ b/wp-content/themes/miro/assets/styles/layouts/_posts.scss
@@ -34,3 +34,96 @@
 	}
 }
 
+@include media-breakpoint-up(xs) {
+	.feature-post {
+		position:relative;
+		@include aspect-ratio(16, 9);
+	}
+	.post-tile {
+		position:relative;
+		.post-body {
+			.post-taxonomies {
+				text-transform: uppercase;
+				color:$black;
+				font-size:.8rem;
+				font-weight: $font-regular;
+			}
+			.post-title {
+				font-weight: $font-bold;
+				color:$black;
+				a {
+					color:$black;
+				}
+				a:hover {
+					text-decoration:underline;
+				}
+			}
+			.entry-meta {
+				color:$black;
+				font-size:.8rem;
+				font-weight: $font-regular;
+			}
+		}
+	}
+}
+
+@include media-breakpoint-up(lg) {
+	.post-tile {
+		.post-overlay {
+			position:absolute;
+			top:0;
+			left:0;
+			width:100%;
+			height:100%;
+			z-index:1;
+			background-color:rgba($mdc-blue-grey-900,.8);
+			transition: all .5s ease;
+			-moz-transition: all .5s ease;
+			-ms-transition: all .5s ease;
+			-webkit-transition: all .5s ease;
+			-o-transition: all .5s ease;
+		}
+		.post-image img {
+			-webkit-filter: grayscale(100%);
+			filter: grayscale(100%);
+		}
+		.post-body {
+			position:absolute;
+			bottom:0;
+			left:0;
+			width:100%;
+			z-index:10;
+			.post-taxonomies {
+				color:$white;
+			}
+			.post-title {
+				font-weight: $font-bold;
+				color:$white;
+				a {
+					color:$white;
+				}
+			}
+			.entry-meta {
+				color:$white;
+			}
+		}
+		.post-link {
+			position:absolute;
+			top:0;
+			left:0;
+			width:100%;
+			height:100%;
+			z-index:100;
+		}
+	}
+	.post-tile:hover {
+		.post-overlay {
+			background-color:rgba($mdc-blue-grey-900,.25);
+		}
+		.post-image img {
+			-webkit-filter: grayscale(0);
+			filter: grayscale(0);
+		}
+	}
+}
+
