--- a/wp-content/themes/miro/assets/styles/layouts/_posts.scss
+++ b/wp-content/themes/miro/assets/styles/layouts/_posts.scss
@@ -69,6 +69,7 @@
 
 @include media-breakpoint-up(lg) {
 	.post-tile {
+		overflow:hidden;
 		.post-overlay {
 			position:absolute;
 			top:0;
@@ -86,6 +87,11 @@
 		.post-image img {
 			-webkit-filter: grayscale(100%);
 			filter: grayscale(100%);
+			transition: all .5s ease;
+			-moz-transition: all .5s ease;
+			-ms-transition: all .5s ease;
+			-webkit-transition: all .5s ease;
+			-o-transition: all .5s ease;
 		}
 		.post-body {
 			position:absolute;
@@ -123,6 +129,7 @@
 		.post-image img {
 			-webkit-filter: grayscale(0);
 			filter: grayscale(0);
+			transform: scale(1.03);
 		}
 	}
 }
