--- a/wp-content/themes/miro/assets/styles/common/_variables.scss
+++ b/wp-content/themes/miro/assets/styles/common/_variables.scss
@@ -319,7 +319,7 @@ $white:	#FFF;
 $black:	$mdc-blue-grey-900;
 
 //Base Palette Colors
-$primary: 	$mdc-light-blue-400;
+$primary: 	$mdc-blue-500;
 $secondary: $mdc-blue-grey-400;
 $success: 	$mdc-green-400;
 $danger: 		$mdc-red-400;
