--- a/wp-content/themes/miro/assets/styles/layouts/_pages.scss
+++ b/wp-content/themes/miro/assets/styles/layouts/_pages.scss
@@ -73,4 +73,15 @@
 	}
 }
 
+@media screen and ( min-height: 300px ){
+	.page-hero .explore-more {
+		display:none !important;
+	}
+}
+
+@media screen and ( min-height: 768px ){
+	.page-hero .explore-more {
+		display:block !important;
+	}
+}
 
