--- a/wp-content/themes/miro/assets/styles/components/_forms.scss
+++ b/wp-content/themes/miro/assets/styles/components/_forms.scss
@@ -14,15 +14,54 @@
   @extend .btn-secondary;
 }*/
 
-.search-form {
-	position:relative;
-	input {
-		border:none;
-		padding:10px;
-		width:100%;
-		outline:none;
-	}
-	button {
-		font-size:1.5rem;
+.searchwp-live-search-results {
+	border-radius:0;
+}
+.searchwp-live-search-result p {
+	font-weight:$font-regular;
+	padding:.3rem 1rem;
+	border:none;
+}
+
+@include media-breakpoint-up(xs) {
+	.search-form {
+		position:relative;
+		padding:0 15px;
+		label {
+			letter-spacing: 1px;
+			font-size:.8rem;
+			text-transform: uppercase;
+		}
+		input {
+			border-bottom:$mdc-grey-500 solid 3px;
+			border-right:none;
+			border-left:none;
+			border-top:none;
+			padding:10px 30px 10px 10px;
+			width:100%;
+			outline:none;
+			font-size:1.25rem;
+		}
+		button {
+			font-size:1.25rem;
+			position:absolute;
+			bottom:0;
+			right:0;
+		}
 	}
 }
+
+@include media-breakpoint-up(md) {
+	.search-form {
+		padding:0;
+		input {
+			padding:10px 50px 10px 10px;
+			font-size:2rem;
+		}
+		button {
+			font-size:2rem;
+		}
+	}
+}
+
+
