--- a/wp-content/themes/miro/assets/styles/common/_icons.scss
+++ b/wp-content/themes/miro/assets/styles/common/_icons.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?svpdit');
-  src:  url('../fonts/icomoon.eot?svpdit#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?svpdit') format('truetype'),
-    url('../fonts/icomoon.woff?svpdit') format('woff'),
-    url('../fonts/icomoon.svg?svpdit#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?fbqpsl');
+  src:  url('../fonts/icomoon.eot?fbqpsl#iefix') format('embedded-opentype'),
+    url('f../onts/icomoon.ttf?fbqpsl') format('truetype'),
+    url('../fonts/icomoon.woff?fbqpsl') format('woff'),
+    url('../fonts/icomoon.svg?fbqpsl#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-administrator:before {
+  content: "\e946";
+}
+.icon-workspace:before {
+  content: "\e947";
+}
 .icon-ui-carrot:before {
   content: "\e945";
 }
