--- a/wp-content/themes/miro/assets/styles/common/_icons.scss
+++ b/wp-content/themes/miro/assets/styles/common/_icons.scss
@@ -2,7 +2,7 @@
   font-family: 'icomoon';
   src:  url('../fonts/icomoon.eot?fbqpsl');
   src:  url('../fonts/icomoon.eot?fbqpsl#iefix') format('embedded-opentype'),
-    url('f../onts/icomoon.ttf?fbqpsl') format('truetype'),
+    url('../fonts/icomoon.ttf?fbqpsl') format('truetype'),
     url('../fonts/icomoon.woff?fbqpsl') format('woff'),
     url('../fonts/icomoon.svg?fbqpsl#icomoon') format('svg');
   font-weight: normal;
